RESOLVED FIXED259314
ProcessThrottler.cpp: error: format specifies type 'unsigned int' but the argument has type 'ProcessAssertionType' [-Werror,-Wformat]
https://bugs.webkit.org/show_bug.cgi?id=259314
Summary ProcessThrottler.cpp: error: format specifies type 'unsigned int' but the arg...
David Kilzer (:ddkilzer)
Reported 2023-07-18 13:43:13 PDT
``` In file included from BuiltProducts/DerivedSources/WebKit/unified-sources/UnifiedSource62.cpp:7: Source/WebKit/UIProcess/ProcessThrottler.cpp:175:144: error: format specifies type 'unsigned int' but the argument has type 'ProcessAssertionType' [-Werror,-Wformat] 175 | PROCESSTHROTTLER_RELEASE_LOG("setThrottleState: Updating process assertion type to %u (foregroundActivities=%u, backgroundActivities=%u)", newType, m_foregroundActivities.size(), m_backgroundActivities.size()); | ~~ ^~~~~~~ | %d ... 1 error generated. ``` <rdar://111551983>
Attachments
David Kilzer (:ddkilzer)
Comment 1 2023-07-18 13:47:08 PDT
EWS
Comment 2 2023-07-18 15:22:42 PDT
Committed 266142@main (190a527ae2a5): <https://commits.webkit.org/266142@main> Reviewed commits have been landed. Closing PR #15909 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.