ProcessThrottler.cpp: error: format specifies type 'unsigned int' but the argument has type 'ProcessAssertionType' [-Werror,-Wformat] https://bugs.webkit.org/show_bug.cgi?id=259314 <rdar://111551983>

Reviewed by Chris Dumez.

* Source/WebKit/UIProcess/ProcessAssertion.h:
(WebKit::ProcessAssertionType): Make enum class use uint8_t.

* Source/WebKit/UIProcess/ProcessThrottler.cpp:
(WebKit::ProcessThrottler::setThrottleState):
- Use WTF::enumToUnderlyingType() to convert the enum value to its
  underlying type for logging to fix the compiler error.

Canonical link: https://commits.webkit.org/266142@main